# Smart-Report-Analyst

./: .env  .env.example  .gitignore  LICENSE  README.md  agent_prompts  get_password_hash.py  lambda_function_execute_sql  lambda_function_execute_sql_strands  project_setup_ec2_ssm.script  pyproject.toml  rds_iac.tf  table_creation_scripts  test_sample_queries
aws/: STRANDS_IAM.md
config/: settings.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  HistorySidebar.tsx  SqlTable.tsx
frontend/src/context/: AppContext.tsx
frontend/src/lib/: api.ts
src/smart_report_analyst/: __init__.py  __main__.py  app.py
src/smart_report_analyst/config/: __init__.py  settings.py
src/smart_report_analyst/routes/: routes.py
src/smart_report_analyst/service/: __init__.py
src/smart_report_analyst/service/bedrock/: __init__.py  agent_manager.py  kb_manager.py  manager.py  model_manager.py  session_manager.py
src/smart_report_analyst/service/bedrock/agents/: co_ordinator_agent.py
src/smart_report_analyst/service/feedback/: __init__.py  manager.py
src/smart_report_analyst/service/lambda_function/: __init__.py  manager.py
src/smart_report_analyst/service/report_generation/: __init__.py  manager.py
src/smart_report_analyst/service/strands/: __init__.py  runner.py  utils.py
src/smart_report_analyst/service/streamlit/: __init__.py  config.py  manager.py  state.py
src/smart_report_analyst/ui/chainlit/: __init__.py  auth.py  manager.py
(+27 files in other folders)
